end of the lecture

--- a/iteration.Rmd
+++ b/iteration.Rmd
@@ -117,7 +117,51 @@ listcol_df |>
          medians = map_dbl(samp, median))
 ```
 
-```{r}
+## Weather data
 
+```{r}
+weather_df = 
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728", "USW00022534", "USS0023B17S"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2021-01-01",
+    date_max = "2022-12-31") |>
+  mutate(
+    name = recode(
+      id, 
+      USW00094728 = "CentralPark_NY", 
+      USW00022534 = "Molokai_HI",
+      USS0023B17S = "Waterhole_WA"),
+    tmin = tmin / 10,
+    tmax = tmax / 10) |>
+  select(name, id, everything())
+```
+
+```{r}
+weather_nest = 
+  nest(weather_df, data = date:tmin)
+
+weather_nest
+
+weather_nest |> pull(data)
+```
+
+Suppose I want to regress tmax or tmin for each station.
+```{r}
+weather_lm = function(df) {
+  lm(tmax ~ tmin, data = df)
+}
+map(weather_nest$data, weather_lm)
+```
+
+What about a map in a list column.
+```{r}
+weather_nest = 
+  weather_nest |> 
+  mutate(models = map(data, weather_lm))
+```
+
+```{r}
+weather_nest$models
 ```
 
